[Win] Some JavaScript date tests are failing. https://bugs.webkit.org/show_bug.cgi?id=124946

Patch by peavo@outlook.com <peavo@outlook.com> on 2013-11-30
Reviewed by Brent Fulgham.

Use native Win32 api functions to compute Daylight saving time offset.

* wtf/DateMath.cpp:
(WTF::UnixTimeToFileTime): Added method to calculate Win32 specific struct FILETIME from time_t value.
(WTF::calculateDSTOffset): Use native Win32 api functions to compute Daylight saving time offset.

Canonical link: https://commits.webkit.org/143143@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159892 268f45cc-cd09-0410-ab3c-d52691b4dbfc